--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Developing StarCraft Replay Video Sharing Website with Vanilla and NodeJS",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "express": "^4.17.1",
+    "helmet": "^3.23.3",
+    "morgan": "^1.10.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon --exec babel-node index.js --dealy 2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
