--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0"
