fix: change main from index.js to init.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "black-sheep-wall",
   "version": "1.0.0",
   "description": "Developing StarCraft Replay Video Sharing Website with Vanilla and NodeJS",
-  "main": "index.js",
+  "main": "init.js",
   "dependencies": {
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
@@ -12,7 +12,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
