--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "pug": "^3.0.0"
   },
